--- a/hannoushiki.html
+++ b/hannoushiki.html
@@ -28,7 +28,7 @@
             <div class="social_media">
                 <a href="https://twitter.com/albardoo02" target="_blank"><i class="fab fa-twitter"></i></a>
                 <a href="https://www.youtube.com/@albardoo02" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.twitch.tv/albardoo02" target="_blank"><i class="fab fa-twitch"></i></a>
+                <a href="https://github.com/albardoo02" target="_blank"><i class="fa-brands fa-github"></i></a>
             </div>
         </div>
         <div class="main_content">
