--- a/index.html
+++ b/index.html
@@ -8,61 +8,73 @@
         <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
         <link rel="stylesheet" href="./css/index.css">
         <link rel="shortcut icon" href="./img/icon.ico">
+        <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+        <link rel="stylesheet" type="text/css" href="./css/load.css">
     </head>
-<body>
-    <div class="wrapper">
-        <div class="sidebar">
-            <h2>サイトメニュー</h2>
-            <ul>
-                <li><a href="index.html"><i class="fas fa-home"></i>トップ</a></li>
-                <li><a href="genso.html"><i class="fa-solid fa-droplet"></i> 元素記号</a></li>
-                <li><a href="kagakushiki.html"><i class="fa-solid fa-pencil"></i> 化学式</a></li>
-                <li><a href="hannoushiki.html"><i class="fa-solid fa-scroll"></i> 化学反応式</a></li>
-                <li><a href="mol.html"><i class="fa-solid fa-calculator"></i> モルの計算</a></li>
-                <li><a href="calc.html"><i class="fa-solid fa-list-ul"></i> よく出る計算</a></li>
-                <li><a href="news.html"><i class="fa-solid fa-bullhorn"></i> 更新情報</a></li>
-                <li><a href="info.html"><i class="fa-solid fa-question"></i> 概要</a></li>
-                <p>Admin Only</p>
-                <li><a href="database/index.html"><i class="fa-solid fa-database"></i> データベース</a></li>
-            </ul>
-            <div class="social_media">
-                <a href="https://twitter.com/albardoo02" target="_blank"><i class="fab fa-twitter"></i></a>
-                <a href="https://www.youtube.com/@albardoo02" target="_blank"><i class="fab fa-youtube"></i></a>
-                <a href="https://www.twitch.tv/albardoo02" target="_blank"><i class="fab fa-twitch"></i></a>
+    <body>
+        <div id="splash">
+            <div id="splash_text"></div>
             </div>
-        </div>
-        <div class="main_content">
-            <div class="header"><strong>トップ</strong></div>
-            <div class="info">
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
+            <div class="wrapper">
+                <div class="sidebar">
+                    <h2>サイトメニュー</h2>
+                    <ul>
+                        <li><a href="index.html"><i class="fas fa-home"></i>トップ</a></li>
+                        <li><a href="genso.html"><i class="fa-solid fa-droplet"></i> 元素記号</a></li>
+                        <li><a href="kagakushiki.html"><i class="fa-solid fa-pencil"></i> 化学式</a></li>
+                        <li><a href="hannoushiki.html"><i class="fa-solid fa-scroll"></i> 化学反応式</a></li>
+                        <li><a href="mol.html"><i class="fa-solid fa-calculator"></i> モルの計算</a></li>
+                        <li><a href="calc.html"><i class="fa-solid fa-list-ul"></i> よく出る計算</a></li>
+                        <li><a href="news.html"><i class="fa-solid fa-bullhorn"></i> 更新情報</a></li>
+                        <li><a href="info.html"><i class="fa-solid fa-question"></i> 概要</a></li>
+                        <p>Admin Only</p>
+                        <li><a href="database/index.html"><i class="fa-solid fa-database"></i> データベース</a></li>
+                    </ul>
+                    <div class="social_media">
+                        <a href="https://twitter.com/albardoo02" target="_blank"><i class="fab fa-twitter"></i></a>
+                        <a href="https://www.youtube.com/@albardoo02" target="_blank"><i class="fab fa-youtube"></i></a>
+                        <a href="https://github.com/albardoo02" target="_blank"><i class="fa-brands fa-github"></i></a>
+                    </div>
+                </div>
+                <div class="main_content">
+                    <div class="header"><strong>トップページ</strong></div>
+                    <div class="info">
+                        <div>メインコンテンツ</div>
+                        <div>メインコンテンツ</div>
+                        <div>メインコンテンツ</div>
+                    </div>
+                    <div class="mb-600">
+                        <img class="fadein" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
+                    </div>
+                    <div class="mb-600">
+                        <img class="fadein left" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
+                    </div>
+                    <div class="mb-600">
+                        <img class="fadein right" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
+                    </div>
+                    <div class="mb-600">
+                        <img class="fadein top" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
+                    </div>
+                </div>
+                <script>
+                    $(function () {
+                        $(window).scroll(function() {
+                            $('.fadein').each(function () {
+                                var targetElement = $(this).offset().top;
+                                var scroll = $(window).scrollTop();
+                                var windowHeight = $(window).height();
+                                if (scroll > targetElement - windowHeight + 150) {
+                                    $(this).addClass('scrollin');
+                                }
+                            });
+                        });
+                    });
+                </script>
             </div>
-        </div>
-    </div>
-</body>
+        <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
+        <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
+        <script src="./js/index.js"></script>
+    </body>
 </html>
