--- a/calc.html
+++ b/calc.html
@@ -32,36 +32,12 @@
             </div>
         </div>
         <div class="main_content">
-            <div class="header"><strong>よく出る計算    </strong></div>
+            <div class="header"><strong>よく出る計算</strong></div>
             <div class="info">
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-            </div>
+                <div>よく出る計算問題のまとめです</div>
+                <div>しっかり対策をしてテストに臨みましょう</div>
+                <div>随時追加しております</div>
+            </div?>
         </div>
     </div>
 </body>
