--- a/hannoushiki.html
+++ b/hannoushiki.html
@@ -34,33 +34,8 @@
         <div class="main_content">
             <div class="header"><strong>化学反応式</strong></div>
             <div class="info">
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
+                <div>よく出る化学反応式のまとめです</div>
+                <div>随時追加しております</div>
             </div>
         </div>
     </div>
