--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="./css/index.css">
         <link rel="shortcut icon" href="./img/icon.ico">
         <script src="https://code.jquery.com/jquery-3.6.4.js" integrity="sha256-a9jBBRygX1Bh5lt8GZjXDzyOB+bWve9EiO7tROUtj/E=" crossorigin="anonymous"></script>
-        <link rel="stylesheet" type="text/css" href="./css/load.css">
+        <link rel="stylesheet" href="./css/load.css">
     </head>
     <body>
         <div id="splash">
@@ -39,9 +39,12 @@
                 <div class="main_content">
                     <div class="header"><strong>トップページ</strong></div>
                     <div class="info">
-                        <div>メインコンテンツ</div>
-                        <div>メインコンテンツ</div>
-                        <div>メインコンテンツ</div>
+                        <img class="top-image" src="./img/header_genso_img.png" alt="">
+                        &nbsp;
+                        <div>元素が全くわからない！</div>
+                        <div>どうやって計算するの？</div>
+                        <div>モルってなんだよ(殴</div>
+                        <div>そんな人に向けたページとなっています</div>
                     </div>
                     <div class="mb-600">
                         <img class="fadein" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
@@ -75,6 +78,6 @@
         <script src="https://rawgit.com/kimmobrunfeldt/progressbar.js/master/dist/progressbar.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-standalone/6.26.0/babel.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/babel-polyfill/6.26.0/polyfill.min.js"></script>
-        <script src="./js/index.js"></script>
+        <script src="./js/load.js"></script>
     </body>
 </html>
