--- a/kagakushiki.html
+++ b/kagakushiki.html
@@ -34,33 +34,8 @@
         <div class="main_content">
             <div class="header"><strong>化学式</strong></div>
             <div class="info">
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
+                <div>よく使う化学式のまとめです</div>
+                <div>随時追加しております</div>
             </div>
         </div>
     </div>
