--- a/mol.html
+++ b/mol.html
@@ -34,33 +34,8 @@
         <div class="main_content">
             <div class="header"><strong>モルの計算</strong></div>
             <div class="info">
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
-                <div>メインコンテンツ</div>
+                <div>モルの計算の基本問題です</div>
+                <div>新課程のものを記載ています</div>
             </div>
         </div>
     </div>
