--- a/info.html
+++ b/info.html
@@ -34,7 +34,16 @@
         <div class="main_content">
             <div class="header"><strong>概要</strong></div>
             <div class="info">
-                <div>メインコンテンツ</div>
+                <h3>このサイトについて</h3>
+                <div>このサイトは化学がもっと理解してもらえるようにと立ち上げられました！</div>
+                <div>少しずつですが、内容を充実させていきたいと思っております。</div>
+                <div>また、このサイトが全て正しいとは限りませんので、ご了承下さい。</div>
+                <div>不明点ございましたら下記メールアドレスにお問い合わせ下さい。</div>
+                <div>メールアドレス：play@ggle.ml</div>
+                <h3>ソースコード</h3>
+                <div>このサイトのソースコードはGitHubにて公開されております。</div>
+                <div>ライセンスはMIT licenseを適用します。</div>
+                <div><i class="fa-brands fa-github"></i> GitHub：<a href="https://github.com/ElementSymbol/elementsymbol.github.io" target="_blank">https://github.com/ElementSymbol/elementsymbol.github.io</a></div>
             </div>
         </div>
     </div>
