--- a/mol.html
+++ b/mol.html
@@ -35,7 +35,7 @@
             <div class="header"><strong>モルの計算</strong></div>
             <div class="info">
                 <div>モルの計算の基本問題です</div>
-                <div>新課程のものを記載ています</div>
+                <div>新課程のものを記載しています</div>
             </div>
         </div>
     </div>
