--- a/index.html
+++ b/index.html
@@ -46,16 +46,16 @@
                         <div>モルってなんだよ(殴</div>
                         <div>そんな人に向けたページとなっています</div>
                     </div>
-                    <div class="mb-600">
+                    <div class="img-move">
                         <img class="fadein" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
                     </div>
-                    <div class="mb-600">
+                    <div class="img-move">
                         <img class="fadein left" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
                     </div>
-                    <div class="mb-600">
+                    <div class="img-move">
                         <img class="fadein right" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
                     </div>
-                    <div class="mb-600">
+                    <div class="img-move">
                         <img class="fadein top" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
                     </div>
                 </div>
