--- a/genso.html
+++ b/genso.html
@@ -6,13 +6,13 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>元素記号 - Element Symbol Network</title>
         <link rel ="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
-        <link rel="stylesheet" href="./css/genso.css">
+        <link rel="stylesheet" href="./css/index.css">
         <link rel="shortcut icon" href="./img/icon.ico">
     </head>
     <body>
         <div class="wrapper">
             <div class="sidebar">
-                <h2>サイトメニュー</h2>
+                <a href="./index.html"><img src="./img/H2O_2.png" alt="トップページへ"></a>
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i>トップ</a></li>
                     <li><a href="genso.html"><i class="fa-solid fa-droplet"></i> 元素記号</a></li>
