--- a/info.html
+++ b/info.html
@@ -12,7 +12,7 @@
     <body>
         <div class="wrapper">
             <div class="sidebar">
-                <h2>サイトメニュー</h2>
+                <a href="./index.html"><img src="./img/H2O_2.png" alt="トップページへ"></a>
                 <ul>
                     <li><a href="index.html"><i class="fas fa-home"></i>トップ</a></li>
                     <li><a href="genso.html"><i class="fa-solid fa-droplet"></i> 元素記号</a></li>
