--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
                     <div class="img-move">
                         <img class="fadein top" src="./img/H2O.png" alt="" style="display: block; margin: auto;">
                     </div>
+                    <div>H₂Oしか出てこないやんけ！</div>
                 </div>
                 <script>
                     $(function () {
