コンテンツ追加

--- a/genso/index.html
+++ b/genso/index.html
@@ -32,10 +32,22 @@
                 </div>
             </div>
             <div class="main_content">
-                <div class="header"><strong>404 Not Found</strong></div>
+                <div class="header"><strong>元素一覧</strong></div>
                 <div class="info">
-                    <div></div>
-                    <div>お探しのページは見つかりませんでした</div>
+                    <h3>一時避難所  </h3>
+                    <li><a href="../genso.html">元のページに戻る場合はここをクリック</a></li>
+                    &nbsp;
+                    <div>下記リンクをクリックで詳細を確認します</div>
+                    <li><a href="../genso/H.html">水素</a></li>
+                    <li><a href="../genso/He.html">ヘリウム</a></li>
+                    <li><a href="../genso/Li.html">リチウム</a></li>
+                    <li><a href="../genso/Be.html">ベリリウム</a></li>
+                    <li><a href="../genso/B.html">ホウ素</a></li>
+                    <li><a href="../genso/C.html">炭素</a></li>
+                    <li><a href="../genso/N.html">窒素</a></li>
+                    <li><a href="../genso/O.html">酸素</a></li>
+                    <li><a href="../genso/F.html">フッ素</a></li>
+                    <li><a href="../genso/Ne.html">ネオン</a></li>
                 </div>
             </div>
         </div>
